Updated the style and script

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="hex/style.css">
+  <link rel="stylesheet" href="https://prepfortech-hex-colors.netlify.app/style.css">
   <title>Document</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="https://prepfortech-hex-colors.netlify.app/script.js"></script>
 
 </body>
 </html>
